[gd_scene load_steps=6 format=2]

[ext_resource path="res://Portal.tscn" type="PackedScene" id=1]
[ext_resource path="res://Portals.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type spatial;
render_mode unshaded;
uniform sampler2D texture_albedo : hint_albedo;

void vertex() {
}

void fragment() {
	vec2 base_uv = SCREEN_UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo_tex.rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )

[node name="Portals" type="Spatial"]
script = ExtResource( 2 )

[node name="PortalA" parent="." instance=ExtResource( 1 )]

[node name="MeshInstance" parent="PortalA" index="2"]
material_override = SubResource( 2 )

[node name="PortalB" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0 )

[node name="MeshInstance" parent="PortalB" index="2"]
material_override = SubResource( 3 )

[editable path="PortalA"]

[editable path="PortalB"]
